...
              <BigButton
                accessibilityLabel={t('hide.takePictureLabel')}
                testID="image-picker.button.take-picture"
                text={t('hide.takePicture')}
                onPress={takePictureHandler}
              />
              <BigButton accessibilityLabel={t('hide.selectImageLabel')} testID="image-picker.button.select-image" text={t('hide.selectImage')} onPress={pickImage} />
            </>
        }
      </View>
      {image && (
        <View style={styles.imageContainer}>
          <Image accessibilityLabel={t('hide.previewLabel')} source={{uri: image}} style={[styles.image, { width: imageWidth, height: imageHeight }]} testID="image-picker.preview" />
...
